--- a/final.html
+++ b/final.html
@@ -11,6 +11,9 @@
 
 		<!-- Link tag for CSS -->
 		<link rel="stylesheet" type="text/css" href="final.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
 
 		<!-- Google font: Poppins -->
