--- a/final.html
+++ b/final.html
@@ -23,12 +23,15 @@
 	<body> 
 		<section class="header">
 			<h2> Unfit Property Violations in Syracuse Rising </h2>
-			<h4> Interior Property Maintenance is the most common cause of Unfit Property Violations in Syracuse. <br> Christian Dahms </h4>
+			<h4> Interior Property Maintenance is the most common cause of Unfit Property Violations in Syracuse. <br> Christian Dahms | JNL 221 </h4>
 		</section>
 		<section>
 			<h3>This is my first subhed</h3>
 			<!-- Add image below this comment -->
-			<img src="syr.png" alt="Drone shot of the campus of Syracuse University" height="150px" width="200px">
+			<div class="img">
+				<img src="skyline.png" alt="Skyline apartment complex in Syracuse, New York" height="250px" width="300px">
+				<p> In 2023, Skyline Apartments was declared unfit to live in for a third time | Photo credit - Patrick Lohmann </p>
+			</div>
 
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -47,18 +50,10 @@
 			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 		</section>
 		<section>
-			<div class="list">
-				<h2>Top refugee cities in the U.S.</h2>
-				<ul>
-					<li>Chicago</li>
-					<li>Phoenix</li>
-					<li>Houston</li>
-					<li>Boston</li>
-				</ul>
-			</div>
+		
 
 			<!-- Add responsive Datawrapper element below this comment. -->
-			<iframe title="Unfit Properties in Syracuse that received 2020 PMCNYS Violations" aria-label="Donut Chart" id="datawrapper-chart-1Uxoa" src="https://datawrapper.dwcdn.net/1Uxoa/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
+			<iframe title="Unfit Properties in Syracuse that received 2020 PMCNYS Violations" aria-label="Donut Chart" id="datawrapper-chart-1Uxoa" src="https://datawrapper.dwcdn.net/1Uxoa/1/" scrolling="no" frameborder="0" style="width: 0; border: none;" height="400" data-external="1"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",(function(a){if(void 0!==a.data["datawrapper-height"]){var e=document.querySelectorAll("iframe");for(var t in a.data["datawrapper-height"])for(var r=0;r<e.length;r++)if(e[r].contentWindow===a.source){var i=a.data["datawrapper-height"][t]+"px";e[r].style.height=i}}}))}();
 </script>
 
 			
